<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_action_bar_title">About</string>
    <string name="about_app_right_reserved">© 2013-%d   OnePlus. All Rights Reserved.</string>
    <string name="about_app_version_text">Version %s</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_release_note_title">Update log:</string>
    <string name="about_stability_improvement_program">About the System Stability Program</string>
    <string name="about_terms_service">Terms of Service</string>
    <string name="about_user_experience_program">About User Experience Program</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">Color correction allows you to adjust how colors are displayed on your device</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_manual_zen_less_time">Less time.</string>
    <string name="accessibility_manual_zen_more_time">More time.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_security_type_none">Open network</string>
    <string name="accessibility_wifi_security_type_secured">Secure network</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="accessibility_work_profile_app_description">Work %s</string>
    <string name="accessor_expires_text">Lease expires at %s</string>
    <string name="accessor_info_title">Apps sharing data</string>
    <string name="accessor_no_description_text">No description provided by the app.</string>
    <string name="active_input_method_subtypes">Active input methods</string>
    <string name="adb_device_fingerprint_title_format">Device fingerprint: %1$s</string>
    <string name="adb_device_forget">Forget</string>
    <string name="adb_keys_warning_message">Revoke access to USB debugging from all computers you’ve previously authorized?</string>
    <string name="adb_pair_method_code_summary">Pair new devices using six digit code</string>
    <string name="adb_pair_method_code_title">Pair device with pairing code</string>
    <string name="adb_pair_method_qrcode_summary">Pair new devices using QR code scanner</string>
    <string name="adb_pair_method_qrcode_title">Pair device with QR code</string>
    <string name="adb_paired_devices_title">Paired devices</string>
    <string name="adb_pairing_device_dialog_failed_msg">Make sure the device is connected to the same network.</string>
    <string name="adb_pairing_device_dialog_failed_title">Pairing unsuccessful</string>
    <string name="adb_pairing_device_dialog_pairing_code_label">Wi‑Fi pairing code</string>
    <string name="adb_pairing_device_dialog_title">Pair with device</string>
    <string name="adb_qrcode_pairing_device_failed_msg">Failed to pair the device. Either the QR code was incorrect, or the device is not connected to the same network.</string>
    <string name="adb_warning_message">USB debugging is intended for development purposes only. Use it to copy data between your computer and your device, install apps on your device without notification, and read log data.</string>
    <string name="adb_warning_title">Allow USB debugging?</string>
    <string name="adb_wireless_connection_failed_message">Make sure %1$s is connected to the correct network</string>
    <string name="adb_wireless_connection_failed_title">Connection unsuccessful</string>
    <string name="adb_wireless_device_connected_summary">Currently connected</string>
    <string name="adb_wireless_device_details_title">Device details</string>
    <string name="adb_wireless_error">Error</string>
    <string name="adb_wireless_ip_addr_preference_title">IP address &amp; Port</string>
    <string name="adb_wireless_list_empty_off">To see and use available devices, turn on wireless debugging</string>
    <string name="adb_wireless_no_network_msg">Please connect to a Wi‑Fi network</string>
    <string name="adb_wireless_qrcode_pairing_description">Pair device over Wi‑Fi by scanning a QR code</string>
    <string name="adb_wireless_qrcode_pairing_title">Scan QR code</string>
    <string name="adb_wireless_qrcode_summary">Pair device over Wi‑Fi by scanning a QR code</string>
    <string name="adb_wireless_settings">Wireless debugging</string>
    <string name="adb_wireless_verifying_qrcode_text">Pairing device…</string>
    <string name="adbwifi_warning_message">Wireless debugging is intended for development purposes only. Use it to copy data between your computer and your device, install apps on your device without notification, and read log data.</string>
    <string name="adbwifi_warning_title">Allow wireless debugging?</string>
    <string name="agree_text">Agree</string>
    <string name="alarm_template">at %1$s</string>
    <string name="alarm_template_far">on %1$s</string>
    <string name="allow_mock_location">Allow mock locations</string>
    <string name="allow_mock_location_summary">Allow mock locations</string>
    <string name="android_beta_feedback">FEEDBACK</string>
    <string name="android_beta_message">This device is enrolled in the Android Developer Preview Program. The program allows Android developers and enthusiasts to try out pre-release versions of Android. To learn more about the Android Developer Preview Program, or to opt-out, visit <a href="https://www.oneplus.com/os/developer-preview/android11">https://www.oneplus.com/os/developer-preview/android11</a>.</string>
    <string name="android_beta_ok">OK</string>
    <string name="android_beta_program">Android Developer Preview Program</string>
    <string name="animator_duration_scale_title">Animator duration scale</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="disagree_text">Disagree</string>
    <string name="finish_text">Finish</string>
    <string name="oneplus_privacy_policy">Privacy Policy</string>
    <string name="oneplus_skip">Skip</string>
    <string name="oneplus_user_agreement">End User License Agreement</string>
    <string name="privacy_policy_ota_details">Before you continue the upgrade procedure, please read our new privacy policy. Tap on the title to read our policy in detail. Continuing the upgrade procedure indicates that you have read the Privacy Policy.</string>
    <string name="privacy_policy_ota_header">OnePlus Privacy Policy Update</string>
    <string name="privacy_policy_update">Here is the update:</string>
    <string name="privacy_policy_update_text1">1. Add 3rd Cookie usage.</string>
    <string name="privacy_policy_update_text2">"2. Add User's Public Information removing service."</string>
    <string name="privacy_policy_update_text3">3. Add 3rd dispute resolution service.</string>
    <string name="privacy_policy_websit">Visit OnePlus Privacy Policy webpage for more details:</string>
    <string name="privacy_policy_websit_address">https://www.oneplus.com/legal/privacy-policy</string>
    <string name="sud_services_description">Before starting, please read the terms and conditions carefully. Terms of service are the legal agreements between a service provider and a person who wants to use that service. The person must agree to abide by the terms of service in order to use the offered service. Terms of service can also be merely a disclaimer, especially regarding the use of websites.</string>
    <string name="sud_services_title">OnePlus Terms &amp; Conditions</string>
    <string name="suw_agree_continue_text">Agree and continue</string>
    <string name="suw_built_in_updates_description">Allow OnePlus to check for and push built-in app updates to you which aims to improve app stability.</string>
    <string name="suw_built_in_updates_text">Built-in App Updates</string>
    <string name="suw_co_create_header">OnePlus Co-creation User Programs</string>
    <string name="suw_co_create_text">Participate in OnePlus Co-creation User Programs to get the latest information and a better system experience. By agreeing to join, you accept all the items below. You can disable it under Settings> System> Experience improvement programs.</string>
    <string name="suw_oobe_opt_dialog_text">"Participate in OnePlus co-creation user programs to help OnePlus improve system or application design, get the latest news and product information, quickly synchronize cloud service data, and receive fast and stable application updates. You can disable it under Settings> System> Experience improvement programs.
Participate in OnePlus co-creation user programs?"</string>
    <string name="suw_push_notification_description">For better communication, OnePlus may send you official news, product information, questionnaires etc., through notifications.</string>
    <string name="suw_push_notification_text">Push Notifications</string>
    <string name="suw_service_message_description">Allow OnePlus to deliver prompt cloud messaging services to you to ensure optimized product experience.</string>
    <string name="suw_service_message_text">OnePlus Service Messaging</string>
    <string name="suw_system_stability_description">Join the System Stability Program so OnePlus can continue to improve our products.</string>
    <string name="suw_system_stability_text">System Stability Program</string>
    <string name="user_experience_description_details">Join the User Experience Program so OnePlus can continue to improve our product design and overall user experience. OnePlus promises it will never use the information for personal identity recognition. After deciding to join the plan, you can still opt out at any time.</string>
    <string name="user_experience_program">User Experience Program</string>
    <string name="user_privacy_policy">Privacy Policy</string>
</resources>