<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#fffafafa" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textColor="@android:color/white" android:id="@id/next_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top1" android:layout_marginBottom="@dimen/oneplus_contorl_layout_margin_bottom1" android:text="@string/finish_text" android:layout_alignParentBottom="true" android:layout_marginEnd="@dimen/oneplus_contorl_layout_margin_right1" android:layout_alignParentEnd="true" android:backgroundTint="@color/oneplus_accent_color" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/next_button">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/oneplus_contorl_layout_margin_left2" android:layout_marginEnd="@dimen/oneplus_contorl_layout_margin_right2">
            <TextView android:textAppearance="@style/oneplus_contorl_text_style_display1" android:textColor="@color/oneplus_contorl_text_color_primary_light" android:id="@id/oos_headers_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="62.0dip" android:text="@string/privacy_policy_ota_header" />
            <TextView android:textAppearance="@style/oneplus_contorl_text_style_body1" android:textColor="@color/oneplus_contorl_text_color_secondary_light" android:id="@id/oos_headers_details" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top2" android:text="@string/privacy_policy_ota_details" />
            <TextView android:textAppearance="@style/oneplus_contorl_text_style_subheading" android:textColor="@color/oneplus_accent_color" android:id="@id/privacy_policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top1" android:text="@string/user_privacy_policy" />
            <TextView android:textAppearance="@style/oneplus_contorl_text_style_subheading" android:textColor="@color/oneplus_contorl_text_color_primary_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="55.0dip" android:text="@string/privacy_policy_update" />
            <TextView android:textAppearance="@style/oneplus_contorl_text_style_body1" android:textColor="@color/oneplus_contorl_text_color_secondary_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top2" android:text="@string/privacy_policy_update_text1" />
            <TextView android:textAppearance="@style/oneplus_contorl_text_style_body1" android:textColor="@color/oneplus_contorl_text_color_secondary_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top1" android:text="@string/privacy_policy_update_text2" />
            <TextView android:textAppearance="@style/oneplus_contorl_text_style_body1" android:textColor="@color/oneplus_contorl_text_color_secondary_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top1" android:text="@string/privacy_policy_update_text3" />
            <TextView android:textAppearance="@style/oneplus_contorl_text_style_body1" android:textColor="@color/oneplus_contorl_text_color_secondary_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/privacy_policy_websit" />
            <TextView android:textAppearance="@style/oneplus_contorl_text_style_subheading" android:textColor="@color/oneplus_accent_color" android:linksClickable="false" android:id="@id/privacy_policy_websit_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top1" android:text="@string/privacy_policy_websit_address" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>