<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/sud_layout_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/op_control_margin_space5" android:src="@drawable/new_ic_sys_service_icon" android:layout_marginStart="@dimen/op_control_margin_screen_left3" />
    <RelativeLayout android:id="@id/setup_wizard_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/button_layout" android:layout_below="@id/sud_layout_icon">
        <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.material.appbar.AppBarLayout android:id="@id/app_bar" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.google.android.material.appbar.CollapsingAppbarLayout android:id="@id/toolbar_layout" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_scrollFlags="exitUntilCollapsed|scroll|snap" style="@style/AppBarTest">
                    <com.google.android.material.appbar.Appbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="@dimen/op_control_appbar_size_standard" app:layout_collapseMode="pin" app:title="@string/suw_co_create_header" />
                </com.google.android.material.appbar.CollapsingAppbarLayout>
            </com.google.android.material.appbar.AppBarLayout>
            <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/op_control_margin_screen_left3" app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="@style/op_control_text_style_body1" android:textColor="@color/op_control_text_color_primary_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/op_control_margin_screen_left3" android:text="@string/suw_co_create_text" android:layout_below="@id/app_upgrader_title" android:lineSpacingExtra="5.0dip" android:layout_marginStart="@dimen/op_control_margin_screen_left3" android:layout_marginEnd="@dimen/op_control_margin_screen_left3" />
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/op_control_margin_screen_bottom3">
                        <LinearLayout android:orientation="horizontal" android:id="@id/op_user_experience" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="23.0dip" android:src="@drawable/ic_user_experience_program" />
                            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:layout_marginEnd="20.0dip">
                                <TextView android:textColor="@color/op_control_text_color_primary_light" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_experience_program" android:maxLines="1" android:autoSizeTextType="uniform" style="@style/op_control_text_style_h6" />
                                <TextView android:textColor="@color/op_control_text_color_secondary_light" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_experience_description_details" android:maxLines="2" android:autoSizeTextType="uniform" style="@style/op_control_text_style_body1" />
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:id="@id/op_service_messaging" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="23.0dip" android:src="@drawable/new_ic_service_message" />
                            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:layout_marginEnd="20.0dip">
                                <TextView android:textColor="@color/op_control_text_color_primary_light" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suw_service_message_text" android:maxLines="1" android:autoSizeTextType="uniform" style="@style/op_control_text_style_h6" />
                                <TextView android:textColor="@color/op_control_text_color_secondary_light" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suw_service_message_description" android:maxLines="2" android:autoSizeTextType="uniform" style="@style/op_control_text_style_body1" />
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:id="@id/op_builtin_updates" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="23.0dip" android:src="@drawable/new_ic_built_in_app" />
                            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:layout_marginEnd="20.0dip">
                                <TextView android:textColor="@color/op_control_text_color_primary_light" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suw_built_in_updates_text" android:maxLines="1" android:autoSizeTextType="uniform" style="@style/op_control_text_style_h6" />
                                <TextView android:textColor="@color/op_control_text_color_secondary_light" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suw_built_in_updates_description" android:maxLines="2" android:autoSizeTextType="uniform" style="@style/op_control_text_style_body1" />
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:id="@id/op_push_notifications" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="23.0dip" android:src="@drawable/new_ic_push_notification" />
                            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:layout_marginEnd="20.0dip">
                                <TextView android:textColor="@color/op_control_text_color_primary_light" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suw_push_notification_text" android:maxLines="1" android:autoSizeTextType="uniform" style="@style/op_control_text_style_h6" />
                                <TextView android:textColor="@color/op_control_text_color_secondary_light" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suw_push_notification_description" android:maxLines="2" android:autoSizeTextType="uniform" style="@style/op_control_text_style_body1" />
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:id="@id/op_system_stability" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="23.0dip" android:src="@drawable/new_ic_sys_stability" />
                            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:layout_marginEnd="20.0dip">
                                <TextView android:textColor="@color/op_control_text_color_primary_light" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suw_system_stability_text" android:maxLines="1" android:autoSizeTextType="uniform" style="@style/op_control_text_style_h6" />
                                <TextView android:textColor="@color/op_control_text_color_secondary_light" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suw_system_stability_description" android:maxLines="2" android:autoSizeTextType="uniform" style="@style/op_control_text_style_body1" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/button_layout" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/op_control_margin_screen_bottom1" android:layout_marginBottom="18.0dip" android:layout_alignParentBottom="true">
        <TextView android:textStyle="bold" android:textColor="@color/op_control_text_color_primary_light" android:gravity="center_horizontal" android:id="@id/skip_button" android:background="@drawable/button_ripple_material" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="91.0dip" android:text="@string/oneplus_skip" android:textAllCaps="false" android:paddingStart="20.0dip" android:paddingEnd="20.0dip" android:layout_marginStart="@dimen/op_control_margin_space4" android:layout_alignParentStart="true" android:stateListAnimator="@null" />
        <TextView android:textStyle="bold" android:textColor="@color/op_control_text_color_primary_light" android:gravity="center_horizontal" android:id="@id/agree_button" android:background="@drawable/button_ripple_material" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/op_control_margin_space4" android:minWidth="91.0dip" android:text="@string/agree_text" android:textAllCaps="false" android:paddingStart="20.0dip" android:paddingEnd="20.0dip" android:layout_marginEnd="@dimen/op_control_margin_space4" android:layout_alignParentEnd="true" android:stateListAnimator="@null" />
    </RelativeLayout>
</RelativeLayout>