<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/sud_layout_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:src="@drawable/new_oneplus_service" android:layout_marginStart="@dimen/op_control_margin_screen_left3" />
    <RelativeLayout android:id="@id/setup_wizard_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/button_layout" android:layout_below="@id/sud_layout_icon">
        <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.material.appbar.AppBarLayout android:id="@id/app_bar" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.google.android.material.appbar.CollapsingAppbarLayout android:id="@id/toolbar_layout" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_scrollFlags="scroll|snap" style="@style/AppBarTest">
                    <com.google.android.material.appbar.Appbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="@dimen/op_control_appbar_size_standard" app:layout_collapseMode="pin" app:title="@string/sud_services_title" />
                </com.google.android.material.appbar.CollapsingAppbarLayout>
            </com.google.android.material.appbar.AppBarLayout>
            <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="@style/op_control_text_style_body1" android:textColor="@color/op_control_text_color_primary_light" android:id="@id/input_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sud_services_description" android:lineSpacingExtra="5.0dip" android:layout_marginStart="@dimen/op_control_margin_screen_left3" android:layout_marginEnd="@dimen/op_control_margin_screen_right3" android:breakStrategy="simple" />
                    <TextView android:textAppearance="@style/op_control_text_style_body1" android:textStyle="bold" android:textColor="@color/text_clickable_color" android:id="@id/user_protocal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/op_control_margin_screen_bottom3" android:text="@string/oneplus_user_agreement" android:layout_marginStart="@dimen/op_control_margin_screen_left3" android:layout_marginEnd="@dimen/op_control_margin_screen_right3" />
                    <TextView android:textAppearance="@style/op_control_text_style_body1" android:textStyle="bold" android:textColor="@color/text_clickable_color" android:id="@id/user_privacy_policy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/op_control_margin_screen_bottom3" android:text="@string/oneplus_privacy_policy" android:layout_marginStart="@dimen/op_control_margin_screen_left3" android:layout_marginEnd="@dimen/op_control_margin_screen_right3" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/button_layout" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/op_control_margin_screen_bottom1" android:layout_marginBottom="18.0dip" android:layout_alignParentBottom="true">
        <TextView android:textStyle="bold" android:textColor="@color/op_control_text_color_primary_light" android:gravity="center_horizontal" android:id="@id/skip_button" android:background="@drawable/button_ripple_material" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="91.0dip" android:text="@string/disagree_text" android:textAllCaps="false" android:paddingStart="20.0dip" android:paddingEnd="20.0dip" android:layout_marginStart="@dimen/op_control_margin_space4" android:layout_alignParentStart="true" android:stateListAnimator="@null" />
        <TextView android:textStyle="bold" android:textColor="@color/op_control_text_color_primary_light" android:gravity="center_horizontal" android:id="@id/agree_button" android:background="@drawable/button_ripple_material" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="91.0dip" android:text="@string/agree_text" android:textAllCaps="false" android:paddingStart="20.0dip" android:paddingEnd="20.0dip" android:layout_marginEnd="@dimen/op_control_margin_space4" android:layout_alignParentEnd="true" android:stateListAnimator="@null" />
    </RelativeLayout>
</RelativeLayout>